--- a/public/index.html
+++ b/public/index.html
@@ -36,8 +36,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
     integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
 </head>
-<link rel="stylesheet" href="./css/main.css">
-<link rel="stylesheet" href="./css/responsive.css">
+<!-- <link rel="stylesheet" href="./css/main.css"> -->
+<!-- <link rel="stylesheet" href="./css/responsive.css"> -->
 <link rel="stylesheet" href="https://unpkg.com/@coreui/icons/css/free.min.css">
 <link rel="stylesheet" href="https://unpkg.com/@coreui/icons/css/brand.min.css">
 <link rel="stylesheet" href="https://unpkg.com/@coreui/icons/css/flag.min.css">
